--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Remove Custom Designs */
 
+* {
+    @apply m-0 p-0 border-0 outline-none box-border list-none no-underline;
 }
 
 /* Custom Classes */
