--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,23 +1,19 @@
 /* NAV */
 nav {
-    @apply flex items-center justify-around;
-    @apply bg-zinc-700/70 h-16 lg:w-1/4 md:w-1/3 xmd:w-1/3 sm:w-2/5 xsm:w-1/2 rounded-full;
-    @apply shadow-2xl fixed top-3/4 z-10 transition duration-300;
-}
+    @apply bg-black/30 w-max block px-3 py-3 z-10 fixed left-1/2 transform -translate-x-2/4 bottom-8;
+    @apply flex space-x-4 rounded-[3rem] backdrop-blur-lg shadow-2xl;
 
-.nav {
-    @apply flex items-center justify-center overflow-hidden;
 }
 
 .nav-item {
-    @apply flex items-center justify-center;
+    @apply flex justify-center bg-transparent p-2 rounded-full text-white;
+}
+
+.nav-item:hover {
+    @apply bg-black/20 transition duration-300;
 }
 
 .item-icon {
-    @apply h-16 w-16 flex items-center content-center justify-center rounded-full;
-    @apply text-white cursor-pointer text-4xl transition duration-300;
+    @apply text-white cursor-pointer transition duration-300;
 }
 
-.item-icon:hover {
-    @apply bg-slate-500 transform scale-110 duration-300;
-}
