--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,23 +1,27 @@
 /* NAV */
+.trans-ease {
+    @apply transition ease-in-out duration-300;
+}
+
 nav {
     @apply bg-black/30 w-max block px-3 py-3 z-10 fixed left-1/2 transform -translate-x-2/4 bottom-8;
-    @apply flex space-x-4 rounded-[3rem] backdrop-blur-lg shadow-2xl;
+    @apply flex space-x-4 rounded-[3rem] backdrop-blur-lg shadow-2xl trans-ease;
 
 }
 
 .nav-item {
-    @apply flex justify-center bg-transparent p-2 rounded-full text-white;
+    @apply flex justify-center bg-transparent p-2 rounded-full text-white trans-ease;
 }
 
 .nav-item:hover {
-    @apply bg-bg-inverted transition duration-300;
+    @apply bg-bg-inverted trans-ease;
 }
 
 .nav-item.active {
-    @apply bg-bg-inverted transition duration-300;
+    @apply bg-bg-inverted trans-ease;
 }
 
 .item-icon {
-    @apply text-white cursor-pointer transition duration-300;
+    @apply text-white cursor-pointer trans-ease;
 }
 
